Removed a max perm jvm option from the scripted configuration.