@@ -30,7 +30,7 @@ object BuildConfiguration extends Build {
     .settings(
       name := "sbt-release-notes-plugin",
       sbtPlugin := true,
-      scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value),
+      scriptedLaunchOpts ++= Seq("-Xmx1024M", "-Dplugin.version=" + version.value),
       scriptedBufferLog := false
     )
 
